# nimbletools-core

./: .gitignore  BRAND-VOICE-GUIDELINES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PUBLISHING.md  README.md  cspell.json  install.sh  nimbletools.code-workspace  redeploy.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build-base-images.yml  ci.yml
base-images/: Makefile  README.md
base-images/binary/: Dockerfile  entrypoint.sh
base-images/node/: Dockerfile  entrypoint.sh  mcpb-loader.js
base-images/python/: Dockerfile  README.md  entrypoint.sh  mcpb-loader.py
base-images/supergateway/: Dockerfile  entrypoint.sh
chart/: Chart.yaml  values.yaml
chart/charts/nginx-ingress/: Chart.yaml  values.yaml
chart/charts/nginx-ingress/templates/: configmap.yaml  controller.yaml  ingressclass.yaml  namespace.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
chart/templates/: _helpers.tpl  control_plane.yaml  crd.yaml  ingress.yaml  nginx-ingress.yaml  operator.yaml  rbac-controller.yaml  rbac.yaml  serviceaccount.yaml
chart/tests/: README.md  control_plane_extraenv_test.yaml  operator_extraenv_test.yaml  rbac_controller_extraenv_test.yaml
control-plane/: .coverage  CLAUDE.md  Dockerfile  Makefile  README.md  __init__.py  coverage.xml  pyproject.toml
control-plane/config/: community-provider.yaml
control-plane/src/nimbletools_control_plane/: __init__.py  _version.py  auth.py  exceptions.py  k8s_utils.py  main.py  mcp_server_models.py  middlewares.py  models.py  provider.py  registry_client.py  route_loader.py  schema_validator.py  workspace_utils.py
control-plane/src/nimbletools_control_plane/auth/: __init__.py  base.py  models.py
control-plane/src/nimbletools_control_plane/providers/: __init__.py  community.py
control-plane/src/nimbletools_control_plane/routes/: __init__.py  registry.py  servers.py  token_auth.py  workspaces.py
control-plane/tests/: __init__.py  conftest.py  test_auth.py  test_deployment_phase.py  test_main.py  test_provider_system.py  test_registry_client.py  test_registry_router.py  test_route_loader.py  test_schema_validator.py  test_server_deployment_debug.py  test_server_get_robustness.py  test_server_helpers.py  test_server_listing_robustness.py  test_server_logs.py  test_server_router.py  test_workspace_duplicate_prevention.py  test_workspace_router.py  test_workspace_utils.py
docs/: ARCHITECTURE.md  AUTHENTICATION.md  CODING_STANDARDS.md  HELM_CONFIGURATION.md  MCPB_BASE_IMAGES.md  PLATFORM_PRINCIPLES.md  QUICKSTART.md  README.md  RELEASE_PROCESS.md  TESTING_HELM_CHARTS.md  server-logs.md
examples/: README.md  echo-mcp.yaml  everything-mcp.yaml
mcp-operator/: .coverage  Dockerfile  Makefile  README.md  ci-check.sh  coverage.xml
mcp-operator/src/nimbletools_core_operator/: __init__.py  _version.py  main.py
mcp-operator/tests/: conftest.py  test_main.py
operator/: .coverage  .dockerignore  CLAUDE.md  Dockerfile  Makefile  coverage.xml  pyproject.toml
operator/src/nimbletools_core_operator/: __init__.py  _version.py  main.py
operator/templates/: service-ingress.yaml
operator/tests/: __init__.py  conftest.py  test_main.py
rbac-controller/: .coverage  .dockerignore  CLAUDE.md  Dockerfile  Makefile  coverage.xml  pyproject.toml
rbac-controller/src/nimbletools_rbac_controller/: __init__.py  _version.py  main.py
rbac-controller/tests/: __init__.py  conftest.py  test_main.py
scripts/: README.md  build-images.sh  dev-setup.sh  dev.sh  register-community-registry.sh  setup-k3d.sh  test-chart.sh  uninstall.sh  update-versions.sh
test/: e2e-test.sh  full-deployment-test.sh  ingress-routing-test.sh  mcp-connection-test.sh  validate-endpoints.sh  validate-project.sh
universal-adapter/: .coverage  .dockerignore  Dockerfile  Makefile  README.md  coverage.xml  main.py  pyproject.toml  requirements.txt
universal-adapter/src/nimbletools_universal_adapter/: __init__.py  _version.py  main.py
universal-adapter/tests/: __init__.py  conftest.py  test_main.py
